# TVTestRemoteController

./: .editorconfig  .gitignore  .prettierignore  CMakeLists.txt  README.md  TVTestRemoteController.sln  TVTestRemoteController.vcxproj  TVTestRemoteController.vcxproj.filters  app.tsx  handler.cpp  handler.h  package.json  pch.h  plugin.cpp  rollup.config.ts  tsconfig.json  vcpkg.json
.github/workflows/: build.yml  ci-plugin.yml  ci-static.yml
components/: ChannelStack.tsx  ColorSchemeButton.tsx  ProgramStack.tsx  SeekStack.tsx  VersionStack.tsx  VolumeStack.tsx
lib/: useFetch.ts  useMemorableColorScheme.ts
pages/: app.tsx  index.html  index.tsx
public/: index.html
public/api/: README.md  channels.json  program.json  version.json  volume.json
